[package]
name = "arbor"
version = "0.1.0"
authors = ["Chris Barnes <barnesc@janelia.hhmi.org>"]

[dependencies]
fnv = "1.0.3"
num = "0.2"
num-derive = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
enum_primitive = "*"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "arbor"
harness = false
