[package]
name = "arbor"
version = "0.1.0"
authors = ["Chris Barnes <barnesc@janelia.hhmi.org>"]

[dependencies]
hashbrown = "0.1.3"
num = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "arbor"
harness = false

[[bench]]
name = "arbor_parser"
harness = false

[[bench]]
name = "synapse_clustering"
harness = false
